fix: Allow resume
